visual changes and automatically opens documentation

--- a/documentation.html
+++ b/documentation.html
@@ -5,143 +5,143 @@
 </head>
 <body>
 <ul>
-<li><ul><h><b>DIODES</b></h>
+<p></p> <li><ul><h><b>DIODES</b></h>
 <li><a href="C:\Users\macie\Documents\Documentation\DIODES\1N4148.pdf" target = "_blank">1N4148</a></li>
 </ul></li>
-<li><ul><h><b>INTEGRATED CIRCUIT</b></h>
-<li><ul><h><b>DAC</b></h>
+<p></p> <li><ul><h><b>INTEGRATED CIRCUIT</b></h>
+<p></p> <li><ul><h><b>DAC</b></h>
 <li><a href="C:\Users\macie\Documents\Documentation\INTEGRATED CIRCUIT\DAC\tlc5615.pdf" target = "_blank">tlc5615</a></li>
 </ul></li>
-<li><ul><h><b>LOGIC IC</b></h>
-<li><ul><h><b>ADDER</b></h>
+<p></p> <li><ul><h><b>LOGIC IC</b></h>
+<p></p> <li><ul><h><b>ADDER</b></h>
 <li><a href="C:\Users\macie\Documents\Documentation\INTEGRATED CIRCUIT\LOGIC IC\ADDER\HD74LS283.pdf" target = "_blank">HD74LS283</a></li>
 </ul></li>
-<li><ul><h><b>AND</b></h>
+<p></p> <li><ul><h><b>AND</b></h>
 <li><a href="C:\Users\macie\Documents\Documentation\INTEGRATED CIRCUIT\LOGIC IC\AND\cd4081b.pdf" target = "_blank">cd4081b</a></li>
 </ul></li>
-<li><ul><h><b>Counter</b></h>
+<p></p> <li><ul><h><b>Counter</b></h>
 <li><a href="C:\Users\macie\Documents\Documentation\INTEGRATED CIRCUIT\LOGIC IC\Counter\cd4026b.pdf" target = "_blank">cd4026b</a></li>
 <li><a href="C:\Users\macie\Documents\Documentation\INTEGRATED CIRCUIT\LOGIC IC\Counter\cd4520b.pdf" target = "_blank">cd4520b</a></li>
 </ul></li>
-<li><ul><h><b>EX-NOR</b></h>
+<p></p> <li><ul><h><b>EX-NOR</b></h>
 <li><a href="C:\Users\macie\Documents\Documentation\INTEGRATED CIRCUIT\LOGIC IC\EX-NOR\empty.pdf" target = "_blank">empty</a></li>
 </ul></li>
-<li><ul><h><b>EX-OR</b></h>
+<p></p> <li><ul><h><b>EX-OR</b></h>
 <li><a href="C:\Users\macie\Documents\Documentation\INTEGRATED CIRCUIT\LOGIC IC\EX-OR\sn54hc86.pdf" target = "_blank">sn54hc86</a></li>
 </ul></li>
-<li><ul><h><b>FLIP-FLOP</b></h>
-<li><ul><h><b>D-TYPE</b></h>
+<p></p> <li><ul><h><b>FLIP-FLOP</b></h>
+<p></p> <li><ul><h><b>D-TYPE</b></h>
 <li><a href="C:\Users\macie\Documents\Documentation\INTEGRATED CIRCUIT\LOGIC IC\FLIP-FLOP\D-TYPE\cd4013b.pdf" target = "_blank">cd4013b</a></li>
 </ul></li>
-<li><ul><h><b>JK-TYPE</b></h>
+<p></p> <li><ul><h><b>JK-TYPE</b></h>
 <li><a href="C:\Users\macie\Documents\Documentation\INTEGRATED CIRCUIT\LOGIC IC\FLIP-FLOP\JK-TYPE\sn74ls107a.pdf" target = "_blank">sn74ls107a</a></li>
 </ul></li>
 </ul></li>
-<li><ul><h><b>NAND</b></h>
+<p></p> <li><ul><h><b>NAND</b></h>
 <li><a href="C:\Users\macie\Documents\Documentation\INTEGRATED CIRCUIT\LOGIC IC\NAND\scls034h.pdf" target = "_blank">scls034h</a></li>
 <li><a href="C:\Users\macie\Documents\Documentation\INTEGRATED CIRCUIT\LOGIC IC\NAND\sn74hc00.pdf" target = "_blank">sn74hc00</a></li>
 <li><a href="C:\Users\macie\Documents\Documentation\INTEGRATED CIRCUIT\LOGIC IC\NAND\SN74HC30N.pdf" target = "_blank">SN74HC30N</a></li>
 </ul></li>
-<li><ul><h><b>NOR</b></h>
+<p></p> <li><ul><h><b>NOR</b></h>
 <li><a href="C:\Users\macie\Documents\Documentation\INTEGRATED CIRCUIT\LOGIC IC\NOR\schs015c.pdf" target = "_blank">schs015c</a></li>
 <li><a href="C:\Users\macie\Documents\Documentation\INTEGRATED CIRCUIT\LOGIC IC\NOR\sn54hc02-sp.pdf" target = "_blank">sn54hc02-sp</a></li>
 </ul></li>
-<li><ul><h><b>NOT</b></h>
+<p></p> <li><ul><h><b>NOT</b></h>
 <li><a href="C:\Users\macie\Documents\Documentation\INTEGRATED CIRCUIT\LOGIC IC\NOT\cd4069ub.pdf" target = "_blank">cd4069ub</a></li>
 </ul></li>
-<li><ul><h><b>OR</b></h>
+<p></p> <li><ul><h><b>OR</b></h>
 <li><a href="C:\Users\macie\Documents\Documentation\INTEGRATED CIRCUIT\LOGIC IC\OR\HD74LS32_Renesas.pdf" target = "_blank">HD74LS32_Renesas</a></li>
 </ul></li>
-<li><ul><h><b>REGISTER</b></h>
+<p></p> <li><ul><h><b>REGISTER</b></h>
 <li><a href="C:\Users\macie\Documents\Documentation\INTEGRATED CIRCUIT\LOGIC IC\REGISTER\scls041i.pdf" target = "_blank">scls041i</a></li>
 </ul></li>
-<li><ul><h><b>TRANSCEIVER</b></h>
+<p></p> <li><ul><h><b>TRANSCEIVER</b></h>
 <li><a href="C:\Users\macie\Documents\Documentation\INTEGRATED CIRCUIT\LOGIC IC\TRANSCEIVER\sn74hc245.pdf" target = "_blank">sn74hc245</a></li>
 </ul></li>
 </ul></li>
-<li><ul><h><b>Memory</b></h>
+<p></p> <li><ul><h><b>Memory</b></h>
 <li><a href="C:\Users\macie\Documents\Documentation\INTEGRATED CIRCUIT\Memory\20005858A.pdf" target = "_blank">20005858A</a></li>
 <li><a href="C:\Users\macie\Documents\Documentation\INTEGRATED CIRCUIT\Memory\CAT28C16AN-90.pdf" target = "_blank">CAT28C16AN-90</a></li>
 <li><a href="C:\Users\macie\Documents\Documentation\INTEGRATED CIRCUIT\Memory\doc0336.pdf" target = "_blank">doc0336</a></li>
 <li><a href="C:\Users\macie\Documents\Documentation\INTEGRATED CIRCUIT\Memory\doc0670.pdf" target = "_blank">doc0670</a></li>
 <li><a href="C:\Users\macie\Documents\Documentation\INTEGRATED CIRCUIT\Memory\Fujitsu MBM2732A.pdf" target = "_blank">Fujitsu MBM2732A</a></li>
 </ul></li>
-<li><ul><h><b>OP-AMP</b></h>
+<p></p> <li><ul><h><b>OP-AMP</b></h>
 <li><a href="C:\Users\macie\Documents\Documentation\INTEGRATED CIRCUIT\OP-AMP\LM311.pdf" target = "_blank">LM311</a></li>
 <li><a href="C:\Users\macie\Documents\Documentation\INTEGRATED CIRCUIT\OP-AMP\LM324N.pdf" target = "_blank">LM324N</a></li>
 <li><a href="C:\Users\macie\Documents\Documentation\INTEGRATED CIRCUIT\OP-AMP\lm339-n.pdf" target = "_blank">lm339-n</a></li>
 <li><a href="C:\Users\macie\Documents\Documentation\INTEGRATED CIRCUIT\OP-AMP\slos076.pdf" target = "_blank">slos076</a></li>
 <li><a href="C:\Users\macie\Documents\Documentation\INTEGRATED CIRCUIT\OP-AMP\TL081CP.pdf" target = "_blank">TL081CP</a></li>
 </ul></li>
-<li><ul><h><b>TIMER</b></h>
+<p></p> <li><ul><h><b>TIMER</b></h>
 <li><a href="C:\Users\macie\Documents\Documentation\INTEGRATED CIRCUIT\TIMER\NE555P.pdf" target = "_blank">NE555P</a></li>
 <li><a href="C:\Users\macie\Documents\Documentation\INTEGRATED CIRCUIT\TIMER\se556.pdf" target = "_blank">se556</a></li>
 <li><a href="C:\Users\macie\Documents\Documentation\INTEGRATED CIRCUIT\TIMER\TLC556CN.pdf" target = "_blank">TLC556CN</a></li>
 </ul></li>
-<li><ul><h><b>VOLTAGE REGULATOR</b></h>
+<p></p> <li><ul><h><b>VOLTAGE REGULATOR</b></h>
 <li><a href="C:\Users\macie\Documents\Documentation\INTEGRATED CIRCUIT\VOLTAGE REGULATOR\AMS1117.pdf" target = "_blank">AMS1117</a></li>
 <li><a href="C:\Users\macie\Documents\Documentation\INTEGRATED CIRCUIT\VOLTAGE REGULATOR\LM317.pdf" target = "_blank">LM317</a></li>
 </ul></li>
 </ul></li>
-<li><ul><h><b>MCU</b></h>
-<li><ul><h><b>ATMEL</b></h>
-<li><ul><h><b>AT89C52</b></h>
+<p></p> <li><ul><h><b>MCU</b></h>
+<p></p> <li><ul><h><b>ATMEL</b></h>
+<p></p> <li><ul><h><b>AT89C52</b></h>
 <li><a href="C:\Users\macie\Documents\Documentation\MCU\ATMEL\AT89C52\AT89C52.pdf" target = "_blank">AT89C52</a></li>
 </ul></li>
-<li><ul><h><b>ATMega328p</b></h>
+<p></p> <li><ul><h><b>ATMega328p</b></h>
 <li><a href="C:\Users\macie\Documents\Documentation\MCU\ATMEL\ATMega328p\ATmega328P.pdf" target = "_blank">ATmega328P</a></li>
 </ul></li>
 </ul></li>
-<li><ul><h><b>ESP</b></h>
-<li><ul><h><b>ESP8266</b></h>
+<p></p> <li><ul><h><b>ESP</b></h>
+<p></p> <li><ul><h><b>ESP8266</b></h>
 <li><a href="C:\Users\macie\Documents\Documentation\MCU\ESP\ESP8266\0a-esp8266ex_datasheet_en.pdf" target = "_blank">0a-esp8266ex_datasheet_en</a></li>
 <li><a href="C:\Users\macie\Documents\Documentation\MCU\ESP\ESP8266\A-Beginner's-Guide-to-the-ESP8266.pdf" target = "_blank">A-Beginner's-Guide-to-the-ESP8266</a></li>
 <li><a href="C:\Users\macie\Documents\Documentation\MCU\ESP\ESP8266\esp8266-technical_reference_en.pdf" target = "_blank">esp8266-technical_reference_en</a></li>
 <li><a href="C:\Users\macie\Documents\Documentation\MCU\ESP\ESP8266\Node V3.0 pinout.pdf" target = "_blank">Node V3.0 pinout</a></li>
 </ul></li>
 </ul></li>
-<li><ul><h><b>PIC</b></h>
-<li><ul><h><b>PIC16F72</b></h>
+<p></p> <li><ul><h><b>PIC</b></h>
+<p></p> <li><ul><h><b>PIC16F72</b></h>
 <li><a href="C:\Users\macie\Documents\Documentation\MCU\PIC\PIC16F72\PIC16F72.pdf" target = "_blank">PIC16F72</a></li>
 </ul></li>
 </ul></li>
-<li><ul><h><b>STM</b></h>
-<li><ul><h><b>STM32F103RB</b></h>
+<p></p> <li><ul><h><b>STM</b></h>
+<p></p> <li><ul><h><b>STM32F103RB</b></h>
 <li><a href="C:\Users\macie\Documents\Documentation\MCU\STM\STM32F103RB\stm32f103rb.pdf" target = "_blank">stm32f103rb</a></li>
 </ul></li>
-<li><ul><h><b>STM32F103RC</b></h>
+<p></p> <li><ul><h><b>STM32F103RC</b></h>
 <li><a href="C:\Users\macie\Documents\Documentation\MCU\STM\STM32F103RC\stm32f103rc.pdf" target = "_blank">stm32f103rc</a></li>
 </ul></li>
 </ul></li>
 </ul></li>
-<li><ul><h><b>MODULES</b></h>
-<li><ul><h><b>BT</b></h>
-<li><ul><h><b>BK8000L</b></h>
+<p></p> <li><ul><h><b>MODULES</b></h>
+<p></p> <li><ul><h><b>BT</b></h>
+<p></p> <li><ul><h><b>BK8000L</b></h>
 <li><a href="C:\Users\macie\Documents\Documentation\MODULES\BT\BK8000L\BK8000L_-_ElectroDragon.pdf" target = "_blank">BK8000L_-_ElectroDragon</a></li>
 </ul></li>
 </ul></li>
 </ul></li>
-<li><ul><h><b>SENSORS</b></h>
+<p></p> <li><ul><h><b>SENSORS</b></h>
 <li><a href="C:\Users\macie\Documents\Documentation\SENSORS\A3144.pdf" target = "_blank">A3144</a></li>
 <li><a href="C:\Users\macie\Documents\Documentation\SENSORS\HC-SR04.pdf" target = "_blank">HC-SR04</a></li>
 </ul></li>
-<li><ul><h><b>TRANSISTORS</b></h>
-<li><ul><h><b>BIPOLAR</b></h>
-<li><ul><h><b>NPN</b></h>
+<p></p> <li><ul><h><b>TRANSISTORS</b></h>
+<p></p> <li><ul><h><b>BIPOLAR</b></h>
+<p></p> <li><ul><h><b>NPN</b></h>
 <li><a href="C:\Users\macie\Documents\Documentation\TRANSISTORS\BIPOLAR\NPN\2N3904.pdf" target = "_blank">2N3904</a></li>
 <li><a href="C:\Users\macie\Documents\Documentation\TRANSISTORS\BIPOLAR\NPN\BC547.pdf" target = "_blank">BC547</a></li>
 <li><a href="C:\Users\macie\Documents\Documentation\TRANSISTORS\BIPOLAR\NPN\ca3046.pdf" target = "_blank">ca3046</a></li>
 </ul></li>
-<li><ul><h><b>PNP</b></h>
+<p></p> <li><ul><h><b>PNP</b></h>
 <li><a href="C:\Users\macie\Documents\Documentation\TRANSISTORS\BIPOLAR\PNP\2N3906.pdf" target = "_blank">2N3906</a></li>
 </ul></li>
 </ul></li>
-<li><ul><h><b>DARLINGTON</b></h>
+<p></p> <li><ul><h><b>DARLINGTON</b></h>
 <li><a href="C:\Users\macie\Documents\Documentation\TRANSISTORS\DARLINGTON\td62083.pdf" target = "_blank">td62083</a></li>
 <li><a href="C:\Users\macie\Documents\Documentation\TRANSISTORS\DARLINGTON\TIP120.pdf" target = "_blank">TIP120</a></li>
 </ul></li>
-<li><ul><h><b>MOSFET</b></h>
-<li><ul><h><b>N-CHANNEL</b></h>
+<p></p> <li><ul><h><b>MOSFET</b></h>
+<p></p> <li><ul><h><b>N-CHANNEL</b></h>
 <li><a href="C:\Users\macie\Documents\Documentation\TRANSISTORS\MOSFET\N-CHANNEL\134.pdf" target = "_blank">134</a></li>
 <li><a href="C:\Users\macie\Documents\Documentation\TRANSISTORS\MOSFET\N-CHANNEL\datasheet.pdf" target = "_blank">datasheet</a></li>
 <li><a href="C:\Users\macie\Documents\Documentation\TRANSISTORS\MOSFET\N-CHANNEL\IRF3205.pdf" target = "_blank">IRF3205</a></li>
@@ -151,13 +151,13 @@
 <li><a href="C:\Users\macie\Documents\Documentation\TRANSISTORS\MOSFET\N-CHANNEL\irfz44npbf.pdf" target = "_blank">irfz44npbf</a></li>
 <li><a href="C:\Users\macie\Documents\Documentation\TRANSISTORS\MOSFET\N-CHANNEL\IRLZ44N.pdf" target = "_blank">IRLZ44N</a></li>
 </ul></li>
-<li><ul><h><b>P-CHANNEL</b></h>
+<p></p> <li><ul><h><b>P-CHANNEL</b></h>
 <li><a href="C:\Users\macie\Documents\Documentation\TRANSISTORS\MOSFET\P-CHANNEL\A19T.pdf" target = "_blank">A19T</a></li>
 <li><a href="C:\Users\macie\Documents\Documentation\TRANSISTORS\MOSFET\P-CHANNEL\irf5210spbf.pdf" target = "_blank">irf5210spbf</a></li>
 <li><a href="C:\Users\macie\Documents\Documentation\TRANSISTORS\MOSFET\P-CHANNEL\irf9z34n.pdf" target = "_blank">irf9z34n</a></li>
 </ul></li>
 </ul></li>
 </ul></li>
-</ul>
+
 </body>
 </html>
