read description of pdfs from .txt files

--- a/documentation.html
+++ b/documentation.html
@@ -148,6 +148,7 @@
 <li><a href="C:\Users\macie\Documents\Documentation\TRANSISTORS\MOSFET\N-CHANNEL\IRF540.pdf" target = "_blank">IRF540</a></li>
 <li><a href="C:\Users\macie\Documents\Documentation\TRANSISTORS\MOSFET\N-CHANNEL\IRF640.pdf" target = "_blank">IRF640</a></li>
 <li><a href="C:\Users\macie\Documents\Documentation\TRANSISTORS\MOSFET\N-CHANNEL\IRF740.pdf" target = "_blank">IRF740</a></li>
+basic 740 N_channel transistor<p></p>
 <li><a href="C:\Users\macie\Documents\Documentation\TRANSISTORS\MOSFET\N-CHANNEL\irfz44npbf.pdf" target = "_blank">irfz44npbf</a></li>
 <li><a href="C:\Users\macie\Documents\Documentation\TRANSISTORS\MOSFET\N-CHANNEL\IRLZ44N.pdf" target = "_blank">IRLZ44N</a></li>
 </ul></li>
@@ -158,6 +159,6 @@
 </ul></li>
 </ul></li>
 </ul></li>
-
+</ul>
 </body>
 </html>
