read description of pdfs from .txt files

--- a/documentation.html
+++ b/documentation.html
@@ -128,9 +128,12 @@
 <p></p> <li><ul><h><b>TRANSISTORS</b></h>
 <p></p> <li><ul><h><b>BIPOLAR</b></h>
 <p></p> <li><ul><h><b>NPN</b></h>
-<li><a href="C:\Users\macie\Documents\Documentation\TRANSISTORS\BIPOLAR\NPN\2N3904.pdf" target = "_blank">2N3904</a></li>
-<li><a href="C:\Users\macie\Documents\Documentation\TRANSISTORS\BIPOLAR\NPN\BC547.pdf" target = "_blank">BC547</a></li>
-<li><a href="C:\Users\macie\Documents\Documentation\TRANSISTORS\BIPOLAR\NPN\ca3046.pdf" target = "_blank">ca3046</a></li>
+<li><a href="C:\Users\macie\Documents\Documentation\TRANSISTORS\BIPOLAR\NPN\2N3904 ,2N3904.pdf" target = "_blank">2N3904 ,2N3904</a></li>
+Ic = 200mA, TO-92<p></p>
+<li><a href="C:\Users\macie\Documents\Documentation\TRANSISTORS\BIPOLAR\NPN\BC546, BC547, BC548, BC549, BC550.pdf" target = "_blank">BC546, BC547, BC548, BC549, BC550</a></li>
+Ic = 100mA, TO-92<p></p>
+<li><a href="C:\Users\macie\Documents\Documentation\TRANSISTORS\BIPOLAR\NPN\CA-3046.pdf" target = "_blank">CA-3046</a></li>
+Ic = 50mA, 5x transistor array PDIP, SOIC<p></p>
 </ul></li>
 <p></p> <li><ul><h><b>PNP</b></h>
 <li><a href="C:\Users\macie\Documents\Documentation\TRANSISTORS\BIPOLAR\PNP\2N3906.pdf" target = "_blank">2N3906</a></li>
@@ -148,7 +151,7 @@
 <li><a href="C:\Users\macie\Documents\Documentation\TRANSISTORS\MOSFET\N-CHANNEL\IRF540.pdf" target = "_blank">IRF540</a></li>
 <li><a href="C:\Users\macie\Documents\Documentation\TRANSISTORS\MOSFET\N-CHANNEL\IRF640.pdf" target = "_blank">IRF640</a></li>
 <li><a href="C:\Users\macie\Documents\Documentation\TRANSISTORS\MOSFET\N-CHANNEL\IRF740.pdf" target = "_blank">IRF740</a></li>
-basic 740 N_channel transistor<p></p>
+Rds(on) = 0.55 Ohm, Vds = 400V, Single, CMOS level, TO-220<p></p>
 <li><a href="C:\Users\macie\Documents\Documentation\TRANSISTORS\MOSFET\N-CHANNEL\irfz44npbf.pdf" target = "_blank">irfz44npbf</a></li>
 <li><a href="C:\Users\macie\Documents\Documentation\TRANSISTORS\MOSFET\N-CHANNEL\IRLZ44N.pdf" target = "_blank">IRLZ44N</a></li>
 </ul></li>
